--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
   - include_tasks: create_vpc.yml
   - include_tasks: create_vpc_tier.yml
-  - include_tasks: create_vm_template.yml
+#  - include_tasks: create_vm_template.yml
   - include_tasks: create_certificates.yml
   - include_tasks: create_token.yml
   - include_tasks: create_vm.yml
