--- a/roles/k8s/tasks/create_vm.yml
+++ b/roles/k8s/tasks/create_vm.yml
@@ -30,12 +30,12 @@
     with_sequence: count={{ k8s_num_nodes }}
     register: k8s_nodes
 
-  - name: Create and attach Rook Volumes
-    local_action:
-      module: cs_volume
-      name: "ROOKDATA-{{ k8s_node_prefix }}-node-{{ item }}"
-      vm: "{{ k8s_node_prefix }}-node-{{ item }}" 
-      disk_offering: "{{ k8s_node_disktype }}" 
-      project: "{{ k8s_cloudstack_project }}"
-      state: attached
-    with_sequence: count={{ k8s_num_nodes }}
+#  - name: Create and attach Rook Volumes
+#    local_action:
+#      module: cs_volume
+#      name: "ROOKDATA-{{ k8s_node_prefix }}-node-{{ item }}"
+#      vm: "{{ k8s_node_prefix }}-node-{{ item }}"
+#      disk_offering: "{{ k8s_node_disktype }}"
+#      project: "{{ k8s_cloudstack_project }}"
+#      state: attached
+#    with_sequence: count={{ k8s_num_nodes }}
